# jupyterlab-edu-extension

./: .env.example  .gitignore  README.md  install.json  package-lock.json  package.json  pyproject.toml  start_jupyterlab.ps1  tsconfig.json
jupyter-config/server-config/: jupyterlab_edu_extension.json
jupyterlab_edu_extension/: __init__.py  config.py  handlers.py
jupyterlab_edu_extension/labextension/: package.json
jupyterlab_edu_extension/labextension/static/: 5.4a02ddbdf8ba489ace91.js  631.954b9688ba63cc265ae2.js  715.48c299f7598b64784f23.js  966.fe0afba814d05822758b.js  remoteEntry.eb333b0116d649a0f6ea.js  style.js
jupyterlab_edu_extension/services/: __init__.py  analytics_service.py  auth_service.py  chatgpt_service.py  supabase_client.py  tracking_service.py
schema/: plugin.json
scripts/: install.ps1  install.sh  install_on_pi.sh  supabase_setup.sql
src/: index.ts
src/services/: api.ts  kernelMonitor.ts  sessionManager.ts
src/widgets/: ChatGPTSidebarWidget.ts  ConfigurationWidget.ts  LoginOverlayWidget.ts  ReflectionReportWidget.ts  StudentLoginWidget.ts  index.ts
style/: base.css  index.js
